--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nanajanashia/argocd-app:late
+        image: nanajanashia/argocd-app:latest
         ports:
         - containerPort: 8080
